[gd_scene load_steps=18 format=3 uid="uid://ygpxmyrvsexw"]

[ext_resource type="Script" uid="uid://bhrlpa2ttx82t" path="res://Gear/GearSkin.gd" id="1_g01tw"]
[ext_resource type="Texture2D" uid="uid://cpk0lm4w8uvow" path="res://assets/Gear/JuneV1/hitzone.png" id="2_syavq"]
[ext_resource type="Texture2D" uid="uid://dl300l016j3bx" path="res://assets/Gear/JuneV1/base.png" id="3_u7dcu"]
[ext_resource type="Texture2D" uid="uid://dqutdg0big8xa" path="res://assets/Gear/JuneV1/base_superior.png" id="4_dtqx8"]
[ext_resource type="Texture2D" uid="uid://b3va8jg46yr6b" path="res://concepts/gear_june_v6.png" id="4_fwqfr"]
[ext_resource type="Texture2D" uid="uid://dcjxsuc735wn6" path="res://assets/Gear/JuneV1/base_estrela_vazia.png" id="5_dh8pw"]
[ext_resource type="Texture2D" uid="uid://4ivwdoufdycq" path="res://assets/Gear/JuneV1/base_estrela_1x.png" id="6_ofatc"]
[ext_resource type="Texture2D" uid="uid://cjh1l8pbid44" path="res://assets/Gear/JuneV1/lateral.png" id="7_xxuof"]
[ext_resource type="Texture2D" uid="uid://dqulx1iiig8lu" path="res://assets/Gear/JuneV1/vida_empty.png" id="8_omd5l"]
[ext_resource type="Texture2D" uid="uid://gorgahqlk7wg" path="res://assets/Gear/JuneV1/vida_full.png" id="9_2ksjx"]
[ext_resource type="Texture2D" uid="uid://dg28uyvkauras" path="res://assets/Gear/JuneV1/estrela.png" id="10_u7dcu"]

[sub_resource type="Animation" id="Animation_glv2v"]
resource_name = "Pop up"
length = 1.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Precision/MarginContainer/Percentage:theme_override_font_sizes/normal_font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.133333, 1),
"transitions": PackedFloat32Array(0.31864, 1, 1, 4.28709),
"update": 0,
"values": [35, 65, 60, 60]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Precision/Speed:theme_override_font_sizes/normal_font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.133333, 1),
"transitions": PackedFloat32Array(0.31864, 1, 1, 4.28709),
"update": 0,
"values": [14, 30, 25, 25]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Precision:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 1, 1.25),
"transitions": PackedFloat32Array(0.31864, 1, 1.86607, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_uu6xs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Precision/MarginContainer/Percentage:theme_override_font_sizes/normal_font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [60]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Precision/Speed:theme_override_font_sizes/normal_font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [25]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Precision:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Gear/Control/Star:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r0du0"]
_data = {
&"Pop Up Precision": SubResource("Animation_glv2v"),
&"RESET": SubResource("Animation_uu6xs")
}

[sub_resource type="Animation" id="Animation_u7dcu"]
resource_name = "Beat"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Gear/Control/Star:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1),
"transitions": PackedFloat32Array(0.0525561, 0.406126, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_dtqx8"]
resource_name = "RESET"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dh8pw"]
_data = {
&"Beat": SubResource("Animation_u7dcu"),
&"RESET": SubResource("Animation_dtqx8")
}

[node name="JuneSkin" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g01tw")

[node name="Precision" type="VBoxContainer" parent="."]
visible = false
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.5
offset_top = -27.0
offset_right = 91.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -15

[node name="Speed" type="RichTextLabel" parent="Precision"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 25
text = "Fast"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Precision"]
layout_mode = 2
theme_override_constants/margin_right = 7

[node name="Percentage" type="RichTextLabel" parent="Precision/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 60
text = "100% MAX"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 6
layout_mode = 1
anchors_preset = -1
anchor_left = 0.527
anchor_top = 0.93
anchor_right = 0.527
anchor_bottom = 0.93
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="Score" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
text = "Score: 0"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15

[node name="Speed" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 20
text = "Speed: 0.0x"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="TextAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_r0du0")
}

[node name="BeatAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../TextAnimation")
libraries = {
&"": SubResource("AnimationLibrary_dh8pw")
}

[node name="Gear" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Hitzone" type="NinePatchRect" parent="Gear"]
z_index = 4
z_as_relative = false
layout_mode = 0
offset_left = 709.0
offset_top = 741.0
offset_right = 1212.0
offset_bottom = 770.0
texture = ExtResource("2_syavq")

[node name="Control" type="Control" parent="Gear"]
z_index = 5
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Base" type="NinePatchRect" parent="Gear/Control"]
layout_mode = 0
offset_left = 679.0
offset_right = 1241.0
offset_bottom = 1082.0
texture = ExtResource("3_u7dcu")

[node name="Background" type="ColorRect" parent="Gear/Control/Base"]
z_index = 3
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="FeverGradient" type="TextureRect" parent="Gear/Control/Base"]
z_index = 3
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Superior Base" type="NinePatchRect" parent="Gear/Control"]
layout_mode = 0
offset_left = 705.0
offset_top = 848.0
offset_right = 1214.0
offset_bottom = 1063.0
texture = ExtResource("4_dtqx8")

[node name="FeverBar" type="TextureProgressBar" parent="Gear/Control"]
layout_mode = 0
offset_left = 692.0
offset_top = 838.0
offset_right = 918.0
offset_bottom = 1074.0
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("5_dh8pw")
texture_progress = ExtResource("6_ofatc")

[node name="Side" type="NinePatchRect" parent="Gear/Control"]
layout_mode = 0
offset_left = 1239.0
offset_top = 243.0
offset_right = 1265.0
offset_bottom = 780.0
texture = ExtResource("7_xxuof")

[node name="LifeBar" type="TextureProgressBar" parent="Gear/Control"]
layout_mode = 0
offset_left = 1243.0
offset_top = 270.0
offset_right = 1258.0
offset_bottom = 643.0
value = 100.0
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("8_omd5l")
texture_progress = ExtResource("9_2ksjx")

[node name="Star" type="NinePatchRect" parent="Gear/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 20.137
anchor_top = 23.712
anchor_right = 20.137
anchor_bottom = 23.712
offset_left = -98.48
offset_top = -97.4801
offset_right = 98.52
offset_bottom = 97.5199
pivot_offset = Vector2(98.03, 106.41)
texture = ExtResource("10_u7dcu")
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.517647)
layout_mode = 0
offset_left = 678.0
offset_right = 1265.0
offset_bottom = 1082.0
texture = ExtResource("4_fwqfr")
